--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -1,7 +1,3 @@
-.rebecca-img {
-  width: 100%;
-}
-
 .day-header {
   border-radius: 2px;
   border-style: solid;
@@ -14,11 +10,19 @@
   .day-header {
     width:100%;
   }
+  .rebecca-img {
+    width: 100%;
+  }
 }
 
 @media (min-width: 500px) {
   .day-header {
     width:50%;
+    margin: auto;
+  }
+  .rebecca-img {
+    width: 50%;
+    margin: auto;
   }
 }
 
