--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -3,29 +3,24 @@
   border-style: solid;
   border-width: 1px;
   border-color: #1F1F1F;
+  width: 100%;
+}
+
+.introduction {
+  background-color: #ffe266;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  font-size: 24px;
+}
+
+.intro-text {
   display: inline-block;
 }
 
-@media (max-width: 500px) {
-  .day-header {
-    width:100%;
-  }
-  .rebecca-img {
-    width: 100%;
-  }
+.rebecca {
+  width:100%;
 }
 
-@media (min-width: 500px) {
-  .day-header {
-    width:50%;
-    margin: auto;
-  }
-  .rebecca-img {
-    width: 50%;
-    margin: auto;
-  }
-}
-
-.friday {
+.rebecca-img {
   width: 100%;
 }
