--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -8,8 +8,8 @@
 
 .introduction {
   background-color: #ffe266;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 6rem;
+  padding-bottom: 6rem;
   font-size: 24px;
 }
 
