--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -4,6 +4,12 @@
   border-width: 1px;
   border-color: #1F1F1F;
   width: 100%;
+  background-color: #333;
+  color: #9D9D9D;
+  padding-left: 2rem;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 
 .introduction {
@@ -17,11 +23,11 @@
   display: inline-block;
 }
 
-.rebecca {
+.img-container {
   width:100%;
 }
 
-.rebecca-img {
+.img {
   width: 100%;
 }
 
@@ -33,4 +39,10 @@
 
 .container h1 {
     font-size:64px;
+}
+
+.contact {
+  background-color: #ffe266;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
