--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -89,3 +89,48 @@
   flex-direction: row;
   justify-content: center;
 }
+
+a:link {
+  color: #9D9D9D;
+}
+
+a:visited {
+  color: #6D6D6D;
+}
+
+a:hover {
+  color: #BDBDBD;
+}
+
+a:active {
+  color: #8D8D8D;
+}
+
+.site-desc:hover {
+  color: white;
+}
+
+.contact-table {
+  table-layout: fixed;
+  width: 100%;
+}
+
+.contact-table-label {
+    text-align: center;
+}
+
+th {
+  text-align: center;
+}
+
+td {
+  text-align: center;
+}
+
+.magic-phases {
+  list-style-type: lower-latin;
+}
+
+.magic-phase-info {
+  list-style-type: square;
+}
